# maazdb-rs

./: Cargo.toml  README.md
examples/: basic.rs  cli.rs  simple_test.rs  test_sql.rs
src/: lib.rs
