[package]
name = "maazdb-rs"
version = "0.1.0"
edition = "2024"
authors = ["Maaz Waheed"]
description = "Official Rust driver for MaazDB"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
byteorder = "1.4"
anyhow = "1.0"
comfy_table = "6.0"
colored="2.0"
serde_json = "1.0"